@@ -218,7 +218,11 @@ textual parts.")
 	    (while (and (consp structure)
 			(not (stringp (car structure))))
 	      (setq structure (car structure)))
-	    (setq lines (nth 7 structure))))
+	    (setq lines (if (and
+			     (equal (upcase (nth 0 structure)) "MESSAGE")
+			     (equal (upcase (nth 1 structure)) "RFC822"))
+			    (nth 9 structure)
+			  (nth 7 structure)))))
 	(delete-region (line-beginning-position) (line-end-position))
 	(insert (format "211 %s Article retrieved." article))
 	(forward-line 1)
